Bug 312338 - USABILITY: Text field not focused in credentials dialogs
Summary: USABILITY: Text field not focused in credentials dialogs
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: auth-handler (other bugs)
Version First Reported In: 0.5.2
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-29 14:31 UTC by sombragris
Modified: 2013-02-17 19:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sombragris 2012-12-29 14:31:07 UTC
FIRST and foremost: I'm using kde-telepathy 0.5.2 - There's no such option in the version selector so I'm choosing 0.5.1 instead. Please keep that in mind.

I do not like Kwallet and so I have it disabled. This means that I have to provide credentials for KTP in every login.

The dialog boxes provided for requesting user credentials are OK. However, they are not focused on the text input field and thus one has to specifically click on the text field in order to type a password.

Compare this for, e.g., the akondi/kmail auth dialogs, where the boxes are specifically focused on the relevant text input field.

Now, a corollary of this is that if the dialog box is to be focused on text input, this dialog should also appear in the background, i.e., it should not steal focus from whatever the user is doing.

Reproducible: Always

Steps to Reproduce:
1. Disable Kwallet
2. Attempt to login at a chat server.
3. Begin to type. You realize that the text field is not focused, and you have to click on it in order to type the password.
Actual Results:  
The text input box is not focused, so if I type the input does not go to the input box.

Expected Results:  
The dialog should be focused on the text input box.

Thanks for the outstanding KTP product.
Comment 1 Stefan Eggers 2013-02-17 12:44:55 UTC
Created review request for a change that fixes this for me: https://git.reviewboard.kde.org/r/108991/
Comment 2 David Edmundson 2013-02-17 18:31:11 UTC
Git commit f0903c2bf3bdcd3db3198e02ad8148eff7db6e73 by David Edmundson, on behalf of Stefan Eggers.
Committed on 17/02/2013 at 19:23.
Pushed by davidedmundson into branch 'master'.

Set focus on the password field

Previously when the dialog opened the focus was on the OK button and
one had to click on the KLineEdit widget to enter the password. With
this change the foucs is on the KLineEdit widget instead and one can
start to enter the password right away.

In addition to this make sure the dialog doesn't steal focus. Other-
wise it might interrupt text input in some other window when it opens.

REVIEW: 108991

M  +2    -0    x-telepathy-password-prompt.cpp

http://commits.kde.org/telepathy-auth-handler/f0903c2bf3bdcd3db3198e02ad8148eff7db6e73
Comment 3 sombragris 2013-02-17 19:05:42 UTC
Way to go! Thanks Stefan and David!