x-telepathy-password-prompt.cpp
@@ -30,11 +30,13 @@ XTelepathyPasswordPrompt::XTelepathyPasswordPrompt(const Tp::AccountPtr &account
 {
     ui->setupUi(mainWidget());
 
+    setAttribute(Qt::WA_ShowWithoutActivating);
     setWindowIcon(KIcon(QLatin1String("telepathy-kde")));
 
     ui->accountName->setText(account->displayName());
     ui->accountIcon->setPixmap(KIcon(QLatin1String("dialog-password")).pixmap(60, 60));
     ui->title->setPixmap(KIcon(account->iconName()).pixmap(22, 22));
+    ui->passwordLineEdit->setFocus();
 
     if (walletInterface->isOpen()) {
         ui->savePassword->setChecked(true);
